--- a/pod.yml
+++ b/pod.yml
@@ -6,9 +6,11 @@ spec:
   containers:
   - name: kaniko
     image: gcr.io/kaniko-project/executor:latest
-    args: ["--context=git://github.com/azattar/k8s_jupyterlab.git",
-            "--dockerfile=/Dockerfile",
-            "--destination=<<TOKEN>>/registry.digitalocean.com/k8s-01-registry"] # replace with your dockerhub account
+    command: [ "/bin/bash", "-c", "--" ] 
+    args: [ "while true; do sleep 30; done;" ]
+#     args: ["--context=git://github.com/azattar/k8s_jupyterlab.git",
+#             "--dockerfile=/Dockerfile",
+#             "--destination=<<TOKEN>>/registry.digitalocean.com/k8s-01-registry"] # replace with your dockerhub account
 #    args: ["--dockerfile=/workspace/dockerfile",
 #            "--context=dir://workspace",
 #            "--destination=<user-name>/<repo>"] # replace with your dockerhub account
