--- a/pod.yml
+++ b/pod.yml
@@ -6,7 +6,7 @@ spec:
   containers:
   - name: kaniko
     image: gcr.io/kaniko-project/executor:latest
-    command: [ "/bin/bash", "-c", "--" ] 
+    command: [ "/bin/sh", "-c", "--" ] 
     args: [ "while true; do sleep 30; done;" ]
 #     args: ["--context=git://github.com/azattar/k8s_jupyterlab.git",
 #             "--dockerfile=/Dockerfile",
